--- a/templates/prostages/index.html.twig
+++ b/templates/prostages/index.html.twig
@@ -9,12 +9,12 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Cette page affichera le descriptif du stage ayant pour identifiant {{ idStage }}</h1>
 
-    This friendly message is coming from:
+    {#This friendly message is coming from:
     <ul>
         <li>Your controller at <code><a href="{{ 'F:/Documents/M3104/Prostages/src/Controller/ProstagesController.php'|file_link(0) }}">src/Controller/ProstagesController.php</a></code></li>
         <li>Your template at <code><a href="{{ 'F:/Documents/M3104/Prostages/templates/prostages/index.html.twig'|file_link(0) }}">templates/prostages/index.html.twig</a></code></li>
-    </ul>
+    </ul>#}
 </div>
 {% endblock %}
