--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Prostages{% endblock %}</title>
+		<style> h1 { text-align:center; color:blue; }</style> 
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
