--- a/templates/prostages/index.html.twig
+++ b/templates/prostages/index.html.twig
@@ -1,9 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
-<div class="example-wrapper">
-    <h1>Bienvenue sur Prostages !</h1>
-
-</div>
+<div class="container-fluid">
+	<ul class="list-group list-group-flush">
+		<li class="list-group-item">Stage</li>
+		<li class="list-group-item">Stage</li>
+		<li class="list-group-item">Stage</li>
+		<li class="list-group-item">Stage</li>
+		<li class="list-group-item">Stage</li>
+	</ul>
+		
 {% endblock %}
