--- a/templates/prostages/stages.html.twig
+++ b/templates/prostages/stages.html.twig
@@ -1,11 +1,10 @@
 {% extends 'base.html.twig' %}
 
 
+{% block head %}<h1>Prostages</h1>{% endblock %}
 {% block body %}
 
-<div class="example-wrapper">
-	<h1> Prostages ! <h1>
     <h2>Cette page affichera le descriptif du stage ayant pour identifiant {{ idStage }}</h2>
-
-</div>
+	
+	
 {% endblock %}
