--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,54 +1,71 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Prostages{% endblock %}</title>
-		<style> h1 { text-align:center; color:green; }</style> 
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-        {% block stylesheets %}<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">{% endblock %}
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+        <!-- Affichage titre de page  -->
+        <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
-		{% block head %}<h1> Bienvenue sur Prostages</h1>{% endblock %}
-		<div class="row">
-			<div class="col-md-12">
-				<nav class="navbar navbar-expand-lg " style="background-color: #e3f2fd;">
-					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-						<ul class="navbar-nav">
-							<li class="nav-item">
-								<a class="nav-link" href="/">Accueil</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="/formations">Formations</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="/entreprises">Entreprises</a>
-							</li>
-						</ul>
+      <!-- _________________________________________________________________  -->
+      <!-- BARRE DE NAVIGUATION  -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-2" >
 
-					</div>
-				</nav>
-			</div>
-		</div>
-		
-		<br>
-		<table class="table">
-			<thead>
-				<tr>
-					<th>
-						Stage
-					</th>
-					<th>
-						Entreprise
-					</th>
-					<th>
-						Formation
-					</th>
-				</tr>
-			</thead>
-			<!--Bloc body -->
-			{% block body %}
-			{% endblock %}
-			<!--Bloc javascripts -->
-			{% block javascripts %}<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>{% endblock %}
-	</body>
+            <!-- TITRE DE PROSTAGE  -->
+            <h1 style="padding-top:10px;"><span style="color:red;">Pro</span><span style="color:silver;">Stage</span></h1>
+
+          </div>
+          <div class="col-md">
+            <ul class="nav justify-content-end" style="padding-top:15px;">
+
+              <!-- LIENS DU MENU  -->
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="{{ path('prostages_Accueil') }}" style="color: inherit;">  Accueil</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ path('prostages_Entreprises') }}" style="color: inherit;">  Liste des entreprises</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ path('prostages_Formations') }}" style="color: inherit;">  Liste des formations</a>
+              </li>
+
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!-- CONTENUE DE LA PAGE  -->
+
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="d-flex justify-content-center">
+
+            <!-- MESSAGE DE DESCRIPTION DE PROSTAGE  -->
+            <p style="padding-top:50px;">Bienvenue sur <span style="color:red;">Pro</span><span style="color:silver;">Stage</span> la référence en termes de stages</p>
+
+            </div>
+          </div>
+        </div>
+      </div>
+        <br/>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <!-- CONTENU A AJOUTER  -->
+              {% block body %}{% endblock %}
+            </div>
+          </div>
+        </div>
+        {% block javascripts %}{% endblock %}
+
+        <!-- Inclusion de bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    </body>
 </html>
