--- a/templates/prostages/stagesParFormations.html.twig
+++ b/templates/prostages/stagesParFormations.html.twig
@@ -1,11 +1,8 @@
 {% extends 'base.html.twig' %}
 
-
 {% block body %}
 
-
-
-
+<p style="padding-top:25px;">Liste des stages triés par formations</p>
 <table class="table table-striped table-bordered" >
 <thead >
   <tr>
@@ -14,7 +11,7 @@
     <th scope="col">Formation</th>
   </tr>
 </thead>
-  {% for StageCourant in stages%}
+  {% for StageCourant in formation.stages%}
 
 				<tbody>
 					<tr>
@@ -24,7 +21,7 @@
 
 
 						<td>
-							<a href="{{path('prostages_StagesParEntreprises',{id:StageCourant.entreprises.id})}}">{{StageCourant.entreprises.nom}} </a>
+							{{StageCourant.entreprises.nom}}
 						</td>
 
 
