Ajout progressif des fonctionnalités des TP1 et 2 du module

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,7 @@
         <div class="row">
           <div class="col-md-2" >
 
-            <!-- TITRE DE PROSTAGE  -->
+            <!-- TITRE -->
             <h1 style="padding-top:10px;"><span style="color:red;">Pro</span><span style="color:silver;">Stage</span></h1>
 
           </div>
@@ -34,6 +34,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="{{ path('prostages_Formations') }}" style="color: inherit;">  Liste des formations</a>
               </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="{{ path('prostages_AjoutEntreprise') }}" style="color: inherit;"> Ajouter une entreprise</a>
+			  </li>
 
             </ul>
           </div>
