--- a/templates/prostages/stagesParEntreprise.html.twig
+++ b/templates/prostages/stagesParEntreprise.html.twig
@@ -11,7 +11,7 @@
     <th scope="col">Formation</th>
   </tr>
 </thead>
-  {% for StageCourant in entreprise.stages%}
+  {% for StageCourant in stages%}
 
 				<tbody>
 					<tr>
