Fin Tp3 mais problème attribut manquant

--- a/templates/prostages/ajoutEntreprise.html.twig
+++ b/templates/prostages/ajoutEntreprise.html.twig
@@ -6,11 +6,11 @@
 
 
 
-{{ form_start(vueFormulaire) }}
+{{ form_start(vueFormulaire, {'attr':{'novalidate':'novalidate'}}) }}
 {{ form_row(vueFormulaire.nom, {'attr':{'placeholder':"nom de l'entreprise"}})}}
 {{ form_row(vueFormulaire.adresse, {'attr':{'placeholder':"adresse de l'entreprise"}})}}
 {{ form_row(vueFormulaire.milieu, {'attr':{'placeholder':"milieu de l'entreprise"}})}}
-
+<br>
 <button type="submit" class="btn btn-dark">Enregistrer</button>
 
 {{ form_end(vueFormulaire) }}
