TP3 fini plus TP4 début

--- a/templates/prostages/ajoutEntreprise.html.twig
+++ b/templates/prostages/ajoutEntreprise.html.twig
@@ -6,7 +6,7 @@
 
 
 
-{{ form_start(vueFormulaire, {'attr':{'novalidate':'novalidate'}}) }}
+{{ form_start(vueFormulaire) }}
 {{ form_row(vueFormulaire.nom, {'attr':{'placeholder':"nom de l'entreprise"}})}}
 {{ form_row(vueFormulaire.adresse, {'attr':{'placeholder':"adresse de l'entreprise"}})}}
 {{ form_row(vueFormulaire.milieu, {'attr':{'placeholder':"milieu de l'entreprise"}})}}
