--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,6 +37,9 @@
 			  <li class="nav-item">
 				<a class="nav-link" href="{{ path('prostages_AjoutEntreprise') }}" style="color: inherit;"> Ajouter une entreprise</a>
 			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="{{ path('prostages_AjoutStage') }}" style="color: inherit;">Ajouter un stage</a>
+			  </li>
 
             </ul>
           </div>
